故障编辑页面按分组填写，调整就覅那个字段的标签（中断位置AZ端机房），规整计划内和规定时间内完成修复的显示逻辑

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .clinerules/otnfaults.md
 图像.md
 netbox_otnfaults/__pycache__/__init__.cpython-314.pyc
+netbox_otnfaults/__pycache__/forms.cpython-314.pyc
+netbox_otnfaults/__pycache__/views.cpython-314.pyc
