增加故障状态字段

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,32 @@ netbox_otnfaults/scripts/__pycache__/weekly_fault_report.cpython-314.pyc
 netbox_otnfaults/scripts/__pycache__/fill_missing_sites.cpython-314.pyc
 netbox_otnfaults/__pycache__/urls.cpython-314.pyc
 .agent/rules/zhhao.md
+netbox_otnfaults/__pycache__/__init__.cpython-312.pyc
+netbox_otnfaults/__pycache__/filtersets.cpython-312.pyc
+netbox_otnfaults/__pycache__/forms.cpython-312.pyc
+netbox_otnfaults/__pycache__/models.cpython-312.pyc
+netbox_otnfaults/__pycache__/navigation.cpython-312.pyc
+netbox_otnfaults/__pycache__/tables.cpython-312.pyc
+netbox_otnfaults/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/serializers.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0001_initial.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0007_add_new_fault_fields.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0012_alter_otnfault_first_report_source.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0013_add_fault_status_field.cpython-312.pyc
+netbox_otnfaults/__pycache__/__init__.cpython-312.pyc
+netbox_otnfaults/__pycache__/filtersets.cpython-312.pyc
+netbox_otnfaults/__pycache__/forms.cpython-312.pyc
+netbox_otnfaults/__pycache__/models.cpython-312.pyc
+netbox_otnfaults/__pycache__/navigation.cpython-312.pyc
+netbox_otnfaults/__pycache__/tables.cpython-312.pyc
+netbox_otnfaults/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/serializers.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0001_initial.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0007_add_new_fault_fields.cpython-312.pyc
+netbox_otnfaults/__pycache__/__init__.cpython-312.pyc
