--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ netbox_otnfaults/api/__pycache__/views.cpython-312.pyc
 netbox_otnfaults/migrations/__pycache__/0001_initial.cpython-312.pyc
 netbox_otnfaults/migrations/__pycache__/0007_add_new_fault_fields.cpython-312.pyc
 netbox_otnfaults/__pycache__/__init__.cpython-312.pyc
+netbox_otnfaults/__pycache__/__init__.cpython-312.pyc
+netbox_otnfaults/__pycache__/filtersets.cpython-312.pyc
+netbox_otnfaults/__pycache__/forms.cpython-312.pyc
+netbox_otnfaults/__pycache__/models.cpython-312.pyc
+netbox_otnfaults/__pycache__/navigation.cpython-312.pyc
+netbox_otnfaults/__pycache__/tables.cpython-312.pyc
+netbox_otnfaults/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/serializers.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/urls.cpython-312.pyc
+netbox_otnfaults/api/__pycache__/views.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0001_initial.cpython-312.pyc
+netbox_otnfaults/migrations/__pycache__/0007_add_new_fault_fields.cpython-312.pyc
