--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ netbox_otnfaults/templates/netbox_otnfaults/location_map.html.bak
 netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html.bak
 netbox_otnfaults/static/netbox_otnfaults/js/otnfault_map_app.js.bak
 netbox_otnfaults/static/netbox_otnfaults/js/location_map_app.js.bak
+temp_bak.txt
