--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html.bak
 netbox_otnfaults/static/netbox_otnfaults/js/otnfault_map_app.js.bak
 netbox_otnfaults/static/netbox_otnfaults/js/location_map_app.js.bak
 temp_bak.txt
+
+# Large GeoJSON files (>100MB)
+highways.geojson
+highways_motorway_only.geojson
+highways_simplified.geojson
